02-policy-controller-basic/pod-fizz-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fizz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fizz
  template:
    metadata:
      labels:
        app: fizz
        version: v1
    spec:
      containers:
      - name: fizz
        image: gcr.io/google-samples/whereami:v1.1.3 # just using something small
        ports:
          - name: http
            containerPort: 8080
        livenessProbe:
          httpGet:
              path: /healthz
              port: 8080
              scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 15
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 5
          timeoutSeconds: 1
